# translation-dataset

./: .gitignore  hello.py  pyproject.toml
notebooks/: dataset.ipynb
src/: batch_api.py  config.py  excel_exporter.py  hf_publisher.py  llm_interface.py  models.py  translation_manager.py
