[project]
name = "raft-secutiry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "litellm>=1.58.2",
    "omegaconf>=2.3.0",
    "openai>=1.59.7",
    "openpyxl>=3.1.5",
]
